# godot-mcp-rs

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  LLM_Context.md  README.ja.md  README.md  godot-master.code-workspace  mcp_config.json.example  test_output.txt  test_result.txt
.agent/workflows/: tdd.md
.cargo/: config.toml
addons/godot_mcp/: README.md  command_handler.gd  command_handler.gd.uid  plugin.gd  plugin.gd.uid  websocket_server.gd
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  DESIGN_GQL.md  GODOT_PLUGIN.en.md  GODOT_PLUGIN.md  IMPLEMENTATION_GQL.md  PLAN_GQL.md  ROADMAP.md  TASK_A_GET_PROPERTIES.md  TASK_B_ANIMATION.md  TASK_C_DEBUG_LOG.md  TASK_D_INSTANTIATE_SCENE.md  USAGE.en.md  USAGE.md
docs/archived/: CHECKLIST_PHASE1-5.md
docs/gql/: MIGRATION_GUIDE.md  schema.graphql
src/: cli.rs  lib.rs  main.rs  path_utils.rs  server.rs
src/godot/: commands.rs  gdscript.rs  mod.rs  tres.rs  tscn.rs  types.rs
src/graphql/: codegen_resolver.rs  context.rs  dependency_resolver.rs  error.rs  live_resolver.rs  mod.rs  mutation_resolver.rs  node_type_resolver.rs  project_resolver.rs  refactoring_resolver.rs  resolver.rs  scene_resolver.rs  schema.rs  script_resolver.rs  shader_resolver.rs  test_resolver.rs  types.rs
src/tools/: editor.rs  gql_tools.rs  live.rs  mod.rs  project.rs  resource.rs  scene.rs  script.rs
src/ws/: client.rs  mod.rs
test_project/: project.godot
tests/: dependency_test.rs  input_action_test.rs  introspect_test.rs  live_test.rs  mutation_test.rs  resolver_test.rs  schema_contract_test.rs
(+20 files in other folders)
