[package]
name = "godot-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "MCP server for Godot game engine - enables LLMs to manipulate Godot projects"
license = "MIT"
repository = "https://github.com/user/godot-mcp-rs"

[dependencies]
# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }


# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Error Handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Godot file parsing
nom = "7"
regex = "1"

# HTTP Client (for live commands)
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"

[dependencies.async-graphql]
version = "7"
features = ["chrono"]
